--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World</title>
+  <title>Joshua Dunn: The Site</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>This is where cool Joshua Dunn things will go.</h1>
+  <h2>Cool? Joshua Dunn? That must be why it is empty</h2>
+  
+  <a href="http://dunnjo98.github.io/ellie_FINAL/">Ellie Dunn</a>
 </body>
 </html>
