--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Joshua Dunn: The Site</title>
 </head>
 <body>
-  <h1>This is where cool Joshua Dunn things will go.</h1>
-  <h2>Cool? Joshua Dunn? That must be why it is empty</h2>
+  <h4>This is where cool Joshua Dunn things will go.</h4>
+  <p>Cool? Joshua Dunn? That must be why it is empty.</p>
   
   <a href="http://dunnjo98.github.io/ellie_FINAL/">Ellie Dunn</a>
 </body>
