--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Joshua Dunn: The Site</title>
+  <meta name="description" content="Art">
+  <meta name="Joshua Dunn" content="Joshua Dunn's Artistic Site">
+  <link rel="stylesheet" href="#">
 </head>
 <body>
   <h4>The Joshua Dunn site.</h4>
   <p>Work in progress.</p>
-  
+  <input type="file" multiple onchange="readImagesAndReview(this.files);">
+  <p></p>
+  <div id="thumbnails"></div>
   <a href="http://dunnjo98.github.io/ellie_FINAL/">Ellie Dunn</a>
 </body>
 </html>
